[gd_scene load_steps=41 format=3 uid="uid://jnl7sck3w5ra"]

[ext_resource type="Script" path="res://Scenes/oldPlayer/Player.gd" id="1_iubc7"]
[ext_resource type="Texture2D" uid="uid://3rqih43y5sbk" path="res://Scenes/Player/Assets/Walk.png" id="2_lluym"]
[ext_resource type="Texture2D" uid="uid://ddw0l22h1f70l" path="res://Scenes/Player/Assets/RESET.png" id="3_0dg0o"]
[ext_resource type="Texture2D" uid="uid://rptf73d27i74" path="res://Scenes/Player/Assets/jump.png" id="3_h7n8s"]
[ext_resource type="Texture2D" uid="uid://d1gv4cfq7n6pl" path="res://Scenes/Player/Assets/Fall.png" id="4_gn4yu"]
[ext_resource type="Texture2D" uid="uid://cehw3vgyvsxx6" path="res://Scenes/Player/Assets/Land.png" id="6_siggd"]
[ext_resource type="Texture2D" uid="uid://c5o17b3mba5gv" path="res://Scenes/Player/Assets/Crouch_idle.png" id="7_jhvbv"]
[ext_resource type="Texture2D" uid="uid://vtaf5ij1an7a" path="res://Scenes/Player/Assets/Crouch_walk.png" id="8_tbii7"]

[sub_resource type="GDScript" id="GDScript_pcr7g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64fa3"]
size = Vector2(32, 47)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y7etl"]
animation = &"Crouch_Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w0xu1"]
animation = &"Crouch_idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c5nqg"]
animation = &"Fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pkb6s"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x0a04"]
animation = &"Land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6equo"]
animation = &"RESET"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c2513"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3xvsb"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jm471"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e42fi"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qbv1s"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0rckv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_urt55"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2p7dh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g7y24"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e2v6i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w1eo5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f4v46"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w2jtj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_68b7p"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ua1fw"]
states/Crouch_Walk/node = SubResource("AnimationNodeAnimation_y7etl")
states/Crouch_Walk/position = Vector2(757.667, 21.2797)
states/Crouch_idle/node = SubResource("AnimationNodeAnimation_w0xu1")
states/Crouch_idle/position = Vector2(487.44, 22.3333)
states/End/position = Vector2(289.333, 81.2026)
states/Fall/node = SubResource("AnimationNodeAnimation_c5nqg")
states/Fall/position = Vector2(758.667, 211.399)
states/Jump/node = SubResource("AnimationNodeAnimation_pkb6s")
states/Jump/position = Vector2(509.333, 209.111)
states/Land/node = SubResource("AnimationNodeAnimation_x0a04")
states/Land/position = Vector2(631.556, 208.667)
states/RESET/node = SubResource("AnimationNodeAnimation_6equo")
states/RESET/position = Vector2(631.407, 133.704)
states/Start/position = Vector2(186.222, 82.1996)
states/Walk/node = SubResource("AnimationNodeAnimation_c2513")
states/Walk/position = Vector2(884.296, 126.971)
transitions = ["Jump", "Land", SubResource("AnimationNodeStateMachineTransition_3xvsb"), "Land", "RESET", SubResource("AnimationNodeStateMachineTransition_jm471"), "RESET", "Jump", SubResource("AnimationNodeStateMachineTransition_e42fi"), "Fall", "Land", SubResource("AnimationNodeStateMachineTransition_qbv1s"), "RESET", "Fall", SubResource("AnimationNodeStateMachineTransition_0rckv"), "Walk", "RESET", SubResource("AnimationNodeStateMachineTransition_urt55"), "RESET", "Walk", SubResource("AnimationNodeStateMachineTransition_2p7dh"), "RESET", "Crouch_idle", SubResource("AnimationNodeStateMachineTransition_g7y24"), "Crouch_idle", "Crouch_Walk", SubResource("AnimationNodeStateMachineTransition_e2v6i"), "Crouch_idle", "RESET", SubResource("AnimationNodeStateMachineTransition_w1eo5"), "Crouch_Walk", "RESET", SubResource("AnimationNodeStateMachineTransition_f4v46"), "RESET", "Crouch_Walk", SubResource("AnimationNodeStateMachineTransition_w2jtj"), "Crouch_Walk", "Crouch_idle", SubResource("AnimationNodeStateMachineTransition_68b7p")]
graph_offset = Vector2(124, 8)

[sub_resource type="Animation" id="Animation_ruqfj"]
resource_name = "Crouch_Walk"
length = 0.62
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2d:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2d:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_tbii7")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2d:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2d:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2d:polygon")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(12, 24, 16, 20, 16, -12, 12, -16, -12, -16, -16, -12, -16, 20, -12, 24)]
}

[sub_resource type="Animation" id="Animation_daikj"]
resource_name = "Crouch_idle"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_jhvbv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2d:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2d:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2d:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2d:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2d:polygon")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(12, 24, 16, 20, 16, -12, 12, -16, -12, -16, -16, -12, -16, 20, -12, 24)]
}

[sub_resource type="Animation" id="Animation_tbyq7"]
resource_name = "Fall"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_gn4yu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2d:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2d:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2d:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2d:polygon")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(12, 24, 16, 20, 16, -20, 12, -24, -13, -24, -16, -20, -16, 20, -12, 24)]
}

[sub_resource type="Animation" id="Animation_laidt"]
resource_name = "Jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_h7n8s")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2d:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2d:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 3, 4, 5, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2d:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2d:polygon")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(12, 24, 16, 20, 16, -20, 12, -24, -13, -24, -16, -20, -16, 20, -12, 24)]
}

[sub_resource type="Animation" id="Animation_oca4r"]
resource_name = "Land"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_siggd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2d:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2d:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2d:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.406126, 1, 1),
"update": 0,
"values": [Vector2(3, 2), Vector2(3, 3), Vector2(3, 3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2d:polygon")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(12, 24, 16, 20, 16, -20, 12, -24, -13, -24, -16, -20, -16, 20, -12, 24)]
}

[sub_resource type="Animation" id="Animation_d3hgj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2d:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2d:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_0dg0o")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2d:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2d:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2d:polygon")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(12, 24, 16, 20, 16, -20, 12, -24, -12, -24, -16, -20, -16, 20, -12, 24)]
}

[sub_resource type="Animation" id="Animation_na6da"]
resource_name = "Walk"
length = 0.375
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2d:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2d:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_lluym")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2d:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(12, 24, 16, 20, 16, -20, 12, -24, -13, -24, -16, -20, -16, 20, -12, 24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gt154"]
_data = {
"Crouch_Walk": SubResource("Animation_ruqfj"),
"Crouch_idle": SubResource("Animation_daikj"),
"Fall": SubResource("Animation_tbyq7"),
"Jump": SubResource("Animation_laidt"),
"Land": SubResource("Animation_oca4r"),
"RESET": SubResource("Animation_d3hgj"),
"Walk": SubResource("Animation_na6da")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dvy3q"]
size = Vector2(30, 10)

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, 872)
collision_mask = 7
script = ExtResource("1_iubc7")
jumpForce = 600
stats = SubResource("GDScript_pcr7g")

[node name="Sprite2d" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(3, 3)
texture = ExtResource("3_0dg0o")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_64fa3")

[node name="Camera2d" type="Camera2D" parent="."]
position = Vector2(0, -56)
ignore_rotation = false
zoom = Vector2(0.8, 0.8)
position_smoothing_speed = 8.0

[node name="BodyAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ua1fw")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gt154")
}

[node name="Feet" type="Marker2D" parent="."]
position = Vector2(0, 24)

[node name="tick" type="Timer" parent="."]
autostart = true

[node name="CrouchClipCheck" type="ShapeCast2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_dvy3q")
target_position = Vector2(0, 0)

[connection signal="timeout" from="tick" to="." method="_on_tick_timeout"]
